--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,63 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     background-color: rgba(252, 252, 252, 0.815);
-    font-size: 30px;
+    font-size: 22px;
+    margin: 20px;
 }
 
 .index-text {
-    font: 400;
-    color: rgb(0, 148, 0);
-    display: flex;
+    display: flex; 
+    color: hsl(120, 100%, 29%);    
     margin: 20px;
     margin-right: 20px;    
 }
+
 .index-pics {
+    display: flex; 
     width: 200px;
-    height: 150px;    
+    height: 150px;
     float: center;    
-    padding: 10px;
-    display: flex;    
+    padding: 10px;       
 }
 
-.myButton {
-    color: rgb(255, 255, 255); font-size: 16px; line-height: 16px; padding: 6px; border-radius: 10px; font-family: Georgia, serif; font-weight: normal; text-decoration: none; font-style: normal; font-variant: normal; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 50%, rgb(20, 78, 117) 100%); box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px; border: 2px solid rgb(28, 110, 164); display: inline-block;}
-    .myButton:hover {
-    background: #1C6EA4; }
-    .myButton:active {
-    background: #144E75; }
+.back-button {
+    color: aliceblue;
+    background-color: rgb(145, 14, 127);
+    border-color: yellow;
+    padding: 10px 20px 30px;
+    font-size: 16px;
+    font-weight: 900;
+}
+
+.title {    
+    padding: 30px;
+    text-align: center;
+    color: rgb(47, 47, 245);
+    background-color: rgb(219, 219, 219);
+    border-radius: 30px;
+    text-shadow: 0 0 3px #FF0000, 0 0 5px #00ff15;
+}
+
+.pics {
+    width: 500px;
+    height: 375px;
+    border-radius: 50px;
+    float: left;
+    padding-right: 20px;
+}
+
+.intro {
+    font-size: 42px;
+    font-weight: bold;
+    color:rgb(49, 26, 30)    
+}
+
+.ingredients-title {
+    text-align: center;
+    font-size: 50px;
+}
+
+.ingredients-list {
+    list-style-type: "→ ";
+    margin-left: 80px;
+}
