css changes to home page

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,31 @@
 body {
     font-family: 'Courier New', Courier, monospace;
-    background-color: rgba(252, 252, 252, 0.815);
+    background-color: rgb(83, 83, 83);
+    color: rgb(2, 163, 163);
     font-size: 22px;
-    margin: 20px;
+    margin: 40px 20px;    
+}
+
+h1,
+div {
+    text-align: center;
+}
+
+div {
+    display: flex;
+    margin: 100px 20px;
+}
+
+span {
+    margin: 60px 40px;
 }
 
 .index-text {
-    display: flex; 
-    color: hsl(120, 100%, 29%);    
-    margin: 20px;        
+    color: rgb(228, 100, 166);
+    display: flex;     
 }
 
 .index-pics {
-    display: flex; 
     width: 200px;
     height: 150px;
     float: center;    
@@ -21,11 +34,11 @@ body {
 
 .back-button {
     color: aliceblue;
-    background-color: rgb(145, 14, 127);
-    border-color: yellow;
+    background-color: rgb(81, 77, 117);
+    border-color: rgb(78, 40, 49);
     padding: 10px 20px 30px;
     font-size: 16px;
-    font-weight: 900;
+    font-weight: 900;    
 }
 
 .title {    
@@ -57,6 +70,6 @@ body {
 }
 
 .ingredients-list {
-    list-style-type: "→ ";
+    list-style-type: "→  ";
     margin-left: 80px;
 }
