add small changes to index

--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,22 @@ div {
     text-align: center;
 }
 
-div {
+.row-container {
     display: flex;
     margin: 100px 20px;
 }
 
-span {
-    margin: 60px 40px;
+.recipe-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 30px;
+    justify-content: center;
+    align-items: center;
 }
 
 .index-text {
     color: rgb(228, 100, 166);
-    display: flex;     
+    display: flex;  
 }
 
 .index-pics {
